<resources>
    <string name="app_name">Taste Trouve Driver</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDI3N2LJ0049Exfjp6P49FWtYoel3x_1pY</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="past_order">Past orders</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="go">Go</string>
    <string name="new_order">New Order</string>
    <string name="finish_order">Finish Order</string>
    <string name="pizza_pizza">Pizza Pizza</string>
    <string name="finish_delivery">Finish delivery</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="new_location">new_location</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiaGFyaWtyaXNobmFkYXJhamkiLCJhIjoiY2tuOTVjbzBmMTRsbDJvcGg4aHo2bHE2aSJ9.Qo0K6OT0fA0vAwsTZi0zXw</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="title_activity_my_earnings">MyEarningsActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="logout_warning_messagae">Do you want to log out ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
